--- a/WebContent/listEgressTransit.zul
+++ b/WebContent/listEgressTransit.zul
@@ -53,12 +53,15 @@
                                             <separator/>
                                             <listbox id="lbxRecords" fixedLayout="true" width="1395px" height="530px">
                                                 <listhead>
-                                                    <listheader label="${c:l('sp.common.PartNumber')}" width="125px" sort="auto"/>
+                                                    <listheader label="${c:l('sp.common.PartNumber')}" width="140px" sort="auto"/>
                                                     <listheader label="${c:l('sp.common.descripton')}" width="220px" sort="auto"/>
-                                                     <listheader label="${c:l('sp.common.provider')}" width="110px" sort="auto"/>
-                                                    <listheader label="${c:l('sp.common.serial')}" width="95px" sort="auto"/>
-                                                    <listheader label="${c:l('sp.common.stock')}" width="80px" sort="auto"/>
-                                                    <listheader label="${c:l('sp.common.creationDate')}" width="120px" sort="auto"/>
+                                                     <listheader label="${c:l('sp.common.provider')}" width="130px" sort="auto"/>
+                                                    <listheader label="${c:l('sp.common.serial')}" width="120px" sort="auto"/>
+                                                    <listheader label="${c:l('sp.common.stock')}" width="115px" sort="auto"/>
+                                                    <listheader label="${c:l('sp.common.category')}" width="115px" sort="auto"/>
+                                                     <listheader label="${c:l('sp.common.ubicationBox')}" width="140px" sort="auto"/>
+                                                    <listheader label="${c:l('sp.common.date.expiration')}" width="140px" sort="auto"/>
+                                                     <listheader label="${c:l('sp.common.date.cure')}" width="140px" sort="auto"/>
                                                     <listheader label="-" width="45px" align="center"/>
                                                     <listheader label="-" width="45px" align="center"/>
                                                     <listheader label="-" width="45px" align="center"/>
