--- a/WebContent/listWait.zul
+++ b/WebContent/listWait.zul
@@ -41,6 +41,7 @@
                                                 <hlayout>
                                                     <!--Add button-->
                                                     <div align="left" width="495px">
+                                                        <button id="btnAdd" label="${c:l('sp.common.actions.add')}" width="80px" class="open orange" tooltiptext="${c:l('sp.common.actions.add.tooltip')}" visible="true"/>
                                                     </div>
                                                     <!--Filters button-->
                                                     <div align="right" width="900px">
